# wens_service

./: .env  .env.example  .gitignore  RAILWAY_DEPLOY.md  agent.py  check_tables.py  config.py  db.py  encryption.py  main.py  market_sync.py  middleware.py  migrations.py  models.py  nixpacks.toml  pyproject.toml  requirements.txt  seed.py  tmp_body.json  tmp_ds.json  tmp_ds2.json  tmp_q.json  tmp_q2.json  tools.py  yfinance_cache.py
.claude/: settings.local.json
data_downloads/: TWM自結合併營收.xlsx
routers/: admin.py  auth.py  backtest.py  chart.py  comparison.py  documents.py  earnings.py  export.py  export_pdf.py  fundamentals.py  generated_reports.py  indicators.py  insights.py  kv_store.py  llm_configs.py  llm_proxy.py  notifications.py  optimizer.py  portfolios.py  regimes.py  report_structured.py  reports.py  risk.py  screener.py  stress_test.py  templates.py  watchlist.py  ws_prices.py
schemas/: auth.py  chart.py  common.py  fundamentals.py  kv_store.py  llm_configs.py  portfolios.py  reports.py  risk.py  screener.py  templates.py  watchlist.py
services/: auth_service.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/i18n/: en.ts  index.ts  zh-TW.ts
web/src/pages/: Admin.tsx  Chat.tsx  ComparePage.tsx  Dashboard.tsx  Documents.tsx  FinancialDashboard.tsx  Fundamentals.tsx  GenerateReport.tsx  GeneratedReports.tsx  KVStore.tsx  Login.tsx  MarketChart.tsx  Portfolio.tsx  PortfolioOptimizer.tsx  RegimeDetection.tsx  Register.tsx  Reports.tsx  RiskAnalytics.tsx  Screener.tsx  (+3 more)
(+28 files in other folders)
