[project]
name = "wens-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
    "yfinance>=1.3.0",
]
