[project]
name = "wens-service"
version = "2.0.0"
description = "Taiwan Mobile Financial Report Service — multi-purpose API with LLM integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "openai>=2.33.0",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
    "yfinance>=1.3.0",
]
